Add documentation for gmxapi project.
Store design and planning documentation from Redmine to repository. The
initial Redmine issue is too verbose, but the content is important to
preserve to give context to the related issues.

Parent issue refs #2585

Change-Id: Ic2aa8137134e92789d22ca86c1daf3c73e7a0297

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -296,6 +296,7 @@ if (SPHINX_FOUND)
         dev-manual/error-handling.rst
         dev-manual/formatting.rst
         dev-manual/gmxtree.rst
+        dev-manual/gmxapi.rst
         dev-manual/includestyle.rst
         dev-manual/index.rst
         dev-manual/jenkins.rst
