--- a/src/gromacs/math/tests/CMakeLists.txt
+++ b/src/gromacs/math/tests/CMakeLists.txt
@@ -33,6 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 gmx_add_unit_test(MathUnitTests math-test
+                  dofit.cpp
                   functions.cpp
                   invertmatrix.cpp
                   vectypes.cpp
