Remove meta information from host allocator policy
Also prevent HostAllocator to be copied/propagated.
A HostVector shouldn't be copied without the calling code
having a choice on the pinning policy.
This commit prevents copy construction. Move construction and
copy and move assignment is still allowed.
For move/swap nothing is changed.
For copy assignment the pinning policy of the destination
container is used.

Fixes #2612

Change-Id: I15034e4db2434ea46eda84e70e3f8e6072660d20

--- a/src/gromacs/gpu_utils/tests/CMakeLists.txt
+++ b/src/gromacs/gpu_utils/tests/CMakeLists.txt
@@ -89,6 +89,21 @@ gmx_add_unit_test(GpuUtilsUnitTests gpu_utils-test
     ${SOURCES_FROM_CXX}
     )
 
+function(gmx_compile_test)
+   if(NOT GMX_DEVELOPER_BUILD)
+      return() #Users might run tests on a different machine
+   endif()
+   set(NAME ${ARGV0})
+   set(SOURCE ${ARGV1})
+   set(ERRORMSG ${ARGV2})
+   add_library(${NAME} OBJECT EXCLUDE_FROM_ALL ${SOURCE})
+   add_test(NAME ${NAME} COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ${NAME})
+   set_tests_properties(${NAME} PROPERTIES PASS_REGULAR_EXPRESSION ${ERRORMSG})
+endfunction()
+
+gmx_compile_test(HostAllocatorCompileTest "hostallocator_compile.cpp"
+   "This allocator policy doesn't support copy construction")
+
 if(GMX_USE_CUDA)
     target_link_libraries(gpu_utils-test gpu_utilstest_cuda)
 endif()
