Prepare rerun commit
In Task #1868, we will break out rerun from the do_md code. This
results in new files, rerun.{h,cpp}, containing a do_rerun function
which includes only the portions of code in do_md which are relevant
for rerun. It does, however, make sense to diff this new function to
the current do_md to be able to review the changes made. This commit
therefore duplicates the current md.{h,cpp} files to allow for easier
reviewing of the following changes. It does also change runner.cpp to
send any rerun through the new code path. This allows to create to
independent follow-up commits, namely
1 Cleaning up do_md(), and
2 Cleaning up do_rerun().
Commit 1 will thereby likely be easy to review and merge, while
commit 2 might require more discussion.

Change-Id: I832ce07e3c5932a42151983deb8f527f988b2a2e

--- a/src/gromacs/mdrun/CMakeLists.txt
+++ b/src/gromacs/mdrun/CMakeLists.txt
@@ -39,6 +39,7 @@ gmx_add_libgromacs_sources(
     minimize.cpp
     multisim.cpp
     replicaexchange.cpp
+    rerun.cpp
     runner.cpp
     tpi.cpp
     )
