Add UpdateGroupsCog class
Added class for managing the centers of mass of update groups.
Also added a test.

Change-Id: Ife6c996056e758c9f0fc02d1043a20d745dc3ac8

--- a/src/gromacs/mdlib/tests/CMakeLists.txt
+++ b/src/gromacs/mdlib/tests/CMakeLists.txt
@@ -38,4 +38,5 @@ gmx_add_unit_test(MdlibUnitTest mdlib-test
                   settle.cpp
                   shake.cpp
                   simulationsignal.cpp
-                  updategroups.cpp)
+                  updategroups.cpp
+                  updategroupscog.cpp)
