Add tests for HashedMap
Also moved HashedMap into gmx namespace and replaced the debug
assertions by debug exceptions.

Change-Id: Ie1d5984ee1db9b288e8664d17a86ab265652c637

--- a/src/gromacs/domdec/tests/CMakeLists.txt
+++ b/src/gromacs/domdec/tests/CMakeLists.txt
@@ -33,4 +33,5 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 gmx_add_unit_test(DomDecTests domdec-test
+            hashedmap.cpp
             localatomsetmanager.cpp)
