Provide Context manager to MD integrator through builder.
Add a builder method to allow simulation methods to receive resources
from the client related to the execution environment.

supports gmxapi milestones 10 and 21

Refs #2585
Refs #2620

Change-Id: Iee677de6f8740b103651c2cb6a0bcdddcf9b0b02

--- a/src/gromacs/mdrun/CMakeLists.txt
+++ b/src/gromacs/mdrun/CMakeLists.txt
@@ -33,6 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 gmx_add_libgromacs_sources(
+    context.cpp
     integrator.cpp
     md.cpp
     minimize.cpp
@@ -40,7 +41,8 @@ gmx_add_libgromacs_sources(
     tpi.cpp
     )
 
-gmx_install_headers(integrator.h)
+gmx_install_headers(integrator.h
+                    context.h)
 
 if (BUILD_TESTING)
 # TODO import this from src/programs/mdrun/tests
