--- a/src/api/cpp/tests/CMakeLists.txt
+++ b/src/api/cpp/tests/CMakeLists.txt
@@ -50,6 +50,7 @@
 
 gmx_add_gtest_executable(
     gmxapi-test
+    status.cpp
     version.cpp
     )
 
@@ -70,6 +71,7 @@ set_tests_properties(GmxapiExternalInterfaceTests PROPERTIES
 
 gmx_add_gtest_executable(
     gmxapi-mpi-test MPI
+    status.cpp
     version.cpp
     )
 
