--- a/src/api/cpp/tests/CMakeLists.txt
+++ b/src/api/cpp/tests/CMakeLists.txt
@@ -46,6 +46,7 @@
 
 gmx_add_gtest_executable(
     gmxapi-test
+    test_status.cpp
     test_version_helpers.cpp
     )
 
@@ -63,6 +64,7 @@ set_tests_properties(GmxapiExternalInterfaceTests PROPERTIES
 
 gmx_add_gtest_executable(
     gmxapi-mpi-test MPI
+    test_status.cpp
     test_version_helpers.cpp
     )
 
