--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -54,6 +54,7 @@ configure_file(include/version.h.in include/gmxapi/version.h)
 # variable. See below.
 set(_gmxapi_interface_headers
     include/gmxapi/gromacsfwd.h
+    include/gmxapi/status.h
     include/gmxapi/version.h)
 
 ################################################################################
@@ -161,6 +162,7 @@ target_sources(gmxapi PRIVATE)
 
 target_sources(
     gmxapi PRIVATE
+    status.cpp
     version.cpp
 )
 
