Add gmxapi exceptions.
Establish a base class and a couple of specific exceptions that may be
encountered by an API client. Distinct from gmx::GromacsException to
minimize coupling between GROMACS core and gmxapi at this stage of
development. It is an error for gmxapi operations to emit a
gmx::GromacsException because it is not easily caught by client code
using gmxapi/exceptions.h. The exception hierarchy should be merged in
the future, but until then, gmxapi implementation code should catch and
either usefully handle GromacsExceptions for the client or translate it
to something the client can catch.

Change-Id: I24042f71f77fac827bde3b2df1c3c1121befe9b5

--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -57,6 +57,7 @@ set(GMXAPI_RELEASE ${GMXAPI_MAJOR}.${GMXAPI_MINOR}.${GMXAPI_PATCH})
 # absolute paths in the build tree. Path component before `gmxapi` can be
 # stripped as appropriate by consumers of this list.
 set(GMXAPI_PUBLIC_HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/include/gmxapi/exceptions.h
     ${CMAKE_CURRENT_BINARY_DIR}/cpp/include/gmxapi/version.h)
 
 add_subdirectory(cpp)
