--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -50,6 +50,7 @@ add_subdirectory(include)
 configure_file(include/version.h.in include/gmxapi/version.h)
 
 add_library(gmxapi SHARED
+            exceptions.cpp
             version.cpp)
 
 # Define public interface. Make sure targets linking against `gmxapi` in the build
