[wip] add empty md files
capture some changes that are being relocated

Change-Id: I7cede8ea655b64f43f7501b04c0b93b34648d564

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -56,6 +56,7 @@ set(_gmxapi_interface_headers
     include/gmxapi/exceptions.h
     include/gmxapi/gmxapi.h
     include/gmxapi/gromacsfwd.h
+    include/gmxapi/md.h
     include/gmxapi/status.h
     include/gmxapi/version.h)
 
@@ -165,6 +166,7 @@ target_sources(gmxapi PRIVATE)
 target_sources(
     gmxapi PRIVATE
     gmxapi.cpp
+    md.cpp
     status.cpp
     version.cpp
 )
