--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -53,6 +53,9 @@ configure_file(include/version.h.in include/gmxapi/version.h)
 # inspected or, for full paths in the build environment, the GMXAPI_PUBLIC_BUILD_HEADERS
 # variable. See below.
 set(_gmxapi_interface_headers
+    include/gmxapi/gmxapi.h
+    include/gmxapi/md.h
+    include/gmxapi/md/mdmodule.h
     include/gmxapi/version.h)
 
 ################################################################################
@@ -106,7 +109,9 @@ unset(_names)
 # If any item begins in a generator expression it must evaluate to a full path,
 # so we can't just use $<TARGET_PROPERTIES:gmxapiPublicHeaders,SOURCES>.
 # Also, GMXAPI_PUBLIC_BUILD_HEADERS is not in this scope, so use _gmxapi_public_build_headers
-install(FILES ${_gmxapi_public_build_headers}
+install(DIRECTORY include/gmxapi
+        DESTINATION include)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/include/gmxapi/version.h
         DESTINATION include/gmxapi)
 
 unset(_sources_list)
@@ -147,10 +152,14 @@ target_include_directories(gmxapi PRIVATE
 # and IDEs work better.
 
 # Private / implementation headers in src/api/cpp
-target_sources(gmxapi PRIVATE)
+target_sources(gmxapi PRIVATE
+               md-impl.h
+               )
 
 target_sources(
     gmxapi PRIVATE
+    md.cpp
+    mdmodule.cpp
     version.cpp
 )
 
