--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -58,6 +58,7 @@ set(_gmxapi_interface_headers
     include/gmxapi/gromacsfwd.h
     include/gmxapi/md.h
     include/gmxapi/status.h
+    include/gmxapi/system.h
     include/gmxapi/version.h)
 
 ################################################################################
@@ -161,13 +162,15 @@ target_include_directories(gmxapi PRIVATE
 # and IDEs work better.
 
 # Private / implementation headers in src/api/cpp
-target_sources(gmxapi PRIVATE)
+target_sources(gmxapi PRIVATE
+               system-impl.h)
 
 target_sources(
     gmxapi PRIVATE
     gmxapi.cpp
     md.cpp
     status.cpp
+    system.cpp
     version.cpp
 )
 
