--- a/src/api/cpp/tests/CMakeLists.txt
+++ b/src/api/cpp/tests/CMakeLists.txt
@@ -57,6 +57,7 @@ configure_file(testingconfiguration.in.h testingconfiguration.h)
 gmx_add_gtest_executable(
     gmxapi-test
     test_status.cpp
+    test_system.cpp
     test_version_helpers.cpp
     )
 
@@ -79,6 +80,7 @@ set_tests_properties(GmxapiExternalInterfaceTests PROPERTIES
 gmx_add_gtest_executable(
     gmxapi-mpi-test MPI
     test_status.cpp
+    test_system.cpp
     test_version_helpers.cpp
     )
 
