--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -165,6 +165,7 @@ target_include_directories(gmxapi PRIVATE
 
 # Private / implementation headers in src/api/cpp
 target_sources(gmxapi PRIVATE
+               md-impl.h
                session-impl.h
                system-impl.h
                workflow-impl.h)
@@ -174,6 +175,7 @@ target_sources(
     context.cpp
     gmxapi.cpp
     md.cpp
+    mdmodule.cpp
     session.cpp
     status.cpp
     system.cpp
