Add gmxapi session resources.
Allow simulation support code to access resources from the running
session. Provide some abstraction for resources implemented or
managed differently in different execution environments or API contexts.
Examples of resources are input and output data streams or simulation
control signals.

Support gmxapi milestone 10

Refs #2620

Change-Id: Ic0ed02b876e4d7a253ad75b58cd24593d7e68acf

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -170,6 +170,7 @@ target_include_directories(gmxapi PRIVATE
 target_sources(gmxapi PRIVATE
                md-impl.h
                session-impl.h
+               sessionresources-impl.h
                system-impl.h
                workflow.h
                workflow-impl.h)
