--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -169,6 +169,7 @@ target_include_directories(gmxapi PRIVATE
 # Private / implementation headers in src/api/cpp
 target_sources(gmxapi PRIVATE
                md-impl.h
+               mdsignals-impl.h
                session-impl.h
                sessionresources-impl.h
                system-impl.h
@@ -181,6 +182,7 @@ target_sources(
     gmxapi.cpp
     md.cpp
     mdmodule.cpp
+    mdsignals.cpp
     session.cpp
     status.cpp
     system.cpp
