Allow API access to simulation signals.
Refs #2620 for gmxapi milestone 10

* Provide API client access to signal manager, owned by MDRunner through
  simulation Session resources.
* Allow resetting of global stop conditions to allow reuse of library
  for multiple consecutive simulations in a single runtime context.
* Provide signalling resources from calling code to MD code. (Move
  ownership to client code.)

Also relates to #2224 and various other works in progress.

Change-Id: I2815733d3d18bc04685dacbd8f6a3ba56e55b783

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -167,6 +167,7 @@ target_include_directories(gmxapi PRIVATE
 # Private / implementation headers in src/api/cpp
 target_sources(gmxapi PRIVATE
                md-impl.h
+               mdsignals-impl.h
                session-impl.h
                sessionresources-impl.h
                system-impl.h
@@ -179,6 +180,7 @@ target_sources(
     gmxapi.cpp
     md.cpp
     mdmodule.cpp
+    mdsignals.cpp
     session.cpp
     status.cpp
     system.cpp
