Move make_unique.h to installed interface.
Client software is encouraged to use C++11 standard for best GROMACS
compatibility. As such, we provide the same backported utilities as are
used internally. But we don't publish it to the API, since we don't
really want to encourage others to use it at this time.

Change-Id: I4ea25a44bff6ff51e0f7497284bbb4ea6efd24e7

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -93,6 +93,7 @@ add_subdirectory(mdlib)
 add_subdirectory(applied-forces)
 add_subdirectory(listed-forces)
 add_subdirectory(commandline)
+add_subdirectory(compat)
 add_subdirectory(domdec)
 add_subdirectory(ewald)
 add_subdirectory(fft)
