Allow explicit testing of public vs. private gmxapi interfaces.
The Gromacs::gmxapi CMake target provides the include directory for
`#include "gmxapi/someheader.h"` and test code should link against
this target to test the interface available to GROMACS client code.

Separate test executables should be used to test libgmxapi
implementation details since such tests need access to the build
environment. These tests should use the gmxapiImpl CMake target to get
the include path for implementation headers.

Change-Id: I846bdebcf8c163378a6029d3adbb6f3bc4a70332

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -134,6 +134,15 @@ target_include_directories(gmxapi PUBLIC
     $<INSTALL_INTERFACE:include>
     )
 
+# Define private interface in build environment. (Not installed.)
+# Unit tests for implementation details can use this target.
+add_library(gmxapiImpl INTERFACE)
+target_include_directories(gmxapiImpl INTERFACE
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+                           )
+add_library(Gromacs::gmxapiImpl ALIAS gmxapiImpl)
+
 # Define implementation interface
 target_include_directories(gmxapi PRIVATE
                            ${CMAKE_CURRENT_SOURCE_DIR}
