Framework in which to build gmxapi.
Establish a clean slate in which to develop the new external GROMACS
interface. Introduces `libgmxapi` and installed headers in
`include/gmxapi/` to provide a stable C++ interface.

Note that this commit has several inconsistencies with the gmxtree
policies, and src/api/cpp/* has been added to
docs/doxygen/suppressions.txt to avoid testing noise while these issues
are resolved. They are mostly of the following sort.

1. includes non-local file as "gmxapi/version.h"
2. does not include "gmxpre.h" first

The public interface is separated into a separate directory that does
not fit the current pattern for installed headers, and there is code
that specifically builds against the public interface that should not
include library headers, like "gmxpre.h". Discussion and tasks to
resolve policy and apply appropriate checks is at Redmine issue #2586
(gmxapi milestone 2)

Refs #2586

Change-Id: I1eb8ea75fdaea77e0ce03f2d312c44db8df16f28

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,3 +106,15 @@ endif()
 
 add_subdirectory(gromacs)
 add_subdirectory(programs)
+
+# Activate targets for new C++ API components and docs.
+if(GMX_NATIVE_WINDOWS)
+    # GMXAPI has not been tested in Microsoft environments.
+    set(_GMXAPI_DEFAULT OFF)
+else()
+    set(_GMXAPI_DEFAULT ON)
+endif()
+option(GMXAPI "Experimental external interfaces" ${_GMXAPI_DEFAULT})
+if (GMXAPI)
+   add_subdirectory(api)
+endif()
