--- a/src/gromacs/mdrun/CMakeLists.txt
+++ b/src/gromacs/mdrun/CMakeLists.txt
@@ -43,6 +43,8 @@ gmx_add_libgromacs_sources(
     tpi.cpp
     )
 
+gmx_install_headers(integrator.h)
+
 if (BUILD_TESTING)
 # TODO import this from src/programs/mdrun/tests
 #    add_subdirectory(tests)
