[WIP] Add frameconverters
Add the infrastructure and base functionality of future frameconverters.
This adds the IFrameConverter interface used to modify t_trxframe data
structures in preparation of writing coordinate files to disk.

A base section of frameconverters are added for a number of possible
actions, as well as a module to register and chain them together if
needed.

Two new modules that employ the base functionality are added to the
trajectoryanalysis framework.

Change-Id: I321046359fc65ca56309f5f367d8521a83408da1

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -126,6 +126,8 @@ if (NOT GMX_BUILD_MDRUN_ONLY)
     add_subdirectory(correlationfunctions)
     add_subdirectory(statistics)
     add_subdirectory(analysisdata)
+    add_subdirectory(coordinatedata)
+    add_subdirectory(coordinateio)
     add_subdirectory(selection)
     add_subdirectory(trajectoryanalysis)
     add_subdirectory(energyanalysis)
@@ -149,6 +151,8 @@ configure_file(version.h.cmakein version.h)
 gmx_install_headers(
     analysisdata.h
     commandline.h
+    coordinatedata.h
+    coordinateio.h
     options.h
     random.h
     selection.h
