--- a/src/gromacs/coordinateio/CMakeLists.txt
+++ b/src/gromacs/coordinateio/CMakeLists.txt
@@ -32,32 +32,23 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-file(GLOB FILEIO_SOURCES *.cpp modules/*.cpp)
+file(GLOB COORDINATEIO_SOURCES *.cpp modules/*.cpp)
 
-if(GMX_USE_PLUGINS)
-  set(FILEIO_SOURCES ${FILEIO_SOURCES} ${CMAKE_SOURCE_DIR}/src/external/vmd_molfile/vmddlopen.c)
-else()
-  list(REMOVE_ITEM FILEIO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/vmdio.cpp)
-endif()
-
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${FILEIO_SOURCES} PARENT_SCOPE)
+set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${COORDINATEIO_SOURCES} PARENT_SCOPE)
 
 gmx_install_headers(
-    confio.h
-    enxio.h
-    filetypes.h
-    gmxfio.h
-    matio.h
-    mtxio.h
-    oenv.h
-    pdbio.h
-    rgb.h
-    tpxio.h
-    trrio.h
-    trxio.h
-    xdr_datatype.h
-    xtcio.h
-    xvgr.h
+    coordinateoutput.h
+    modules/outputselector.h
+    modules/setatoms.h
+    modules/setbox.h
+    modules/setconnection.h
+    modules/setforces.h
+    modules/setprecision.h
+    modules/settime.h
+    modules/setvelocities.h
+    outputmanager.h
+    modulecallback.h
+    flags.h
     )
 
 if (BUILD_TESTING)
