--- a/src/gromacs/coordinateio/CMakeLists.txt
+++ b/src/gromacs/coordinateio/CMakeLists.txt
@@ -40,6 +40,9 @@ gmx_install_headers(
     coordinateoutput.h
     modules/outputselector.h
     modules/setatoms.h
+    modules/setbox.h
+    modules/setforces.h
+    modules/setvelocities.h
     outputmanager.h
     modulecallback.h
     )
