Add wrapper for outputadapter methods
Adds a wrapper for containing all the commandline options needed to
initialize the different outputadapter methods, as well as a method to
register them into an existing outputmanager object.

Change-Id: I5ea750203f3e493394ec7e62f385b05b20e442a7

--- a/src/gromacs/coordinateio/CMakeLists.txt
+++ b/src/gromacs/coordinateio/CMakeLists.txt
@@ -47,6 +47,7 @@ gmx_install_headers(
     modules/setvelocities.h
     outputmanager.h
     modulecallback.h
+    flags.h
     )
 
 if (BUILD_TESTING)
