Changes to documentation build script
Moved around some of the builds in documentation.py so they are actually
in the correct order, and made sphinx-input a combined target of both
the input files for the pdf manual and the webpage image files.

Commented on using individual builds in the script instead of simply
using the webpage target and building everything at once.

Refs #2629

Change-Id: I15f556db6dfff12b48b52e8b461f179486a4ea28

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -431,8 +431,10 @@ if (SPHINX_FOUND)
             index.rst
             flow.rst)
     endif()
-    gmx_add_sphinx_input_target(sphinx-input)
+    gmx_add_sphinx_input_target(sphinx-input-rst)
     gmx_add_sphinx_image_conversion_target(sphinx-image-conversion)
+    add_custom_target(sphinx-input)
+    add_dependencies(sphinx-input sphinx-input-rst sphinx-image-conversion)
     # Remove other rst files from the build tree, since they confuse Sphinx.
     # Skip generated files in onlinehelp/, and fragments.
     # The latter do not cause issues with obsolete files, as they
