Separate simulation database used in tests
Change-Id: Id76b6cf1438b5b432ec51e98d2ce170bba01caa2

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -35,8 +35,8 @@
 # make an "object library" for code that we re-use for both kinds of tests
 add_library(mdrun_test_objlib OBJECT
     energyreader.cpp
-    mdruncomparison.cpp
     moduletest.cpp
+    simulationdatabase.cpp
     terminationhelper.cpp
     # PME tests
     pmetest.cpp
