Fix clang-tidy warnings for OCL
Change-Id: I2f794a2209f355c0b3ee67623360724d96982458

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -223,7 +223,7 @@ if (GMX_USE_OPENCL)
         target_sources(libgromacs PRIVATE
             $<TARGET_OBJECTS:clFFT>
         )
-        target_include_directories(libgromacs PRIVATE ${_clFFT_dir}/include)
+        target_include_directories(libgromacs SYSTEM PRIVATE ${_clFFT_dir}/include)
         # Use the magic variable for how to link any library needed for
         # dlopen, etc.  which is -ldl where needed, and empty otherwise
         # (e.g. Windows, BSD, Mac).
