--- a/src/gromacs/mdrun/CMakeLists.txt
+++ b/src/gromacs/mdrun/CMakeLists.txt
@@ -34,8 +34,11 @@
 
 gmx_add_libgromacs_sources(
     integrator.cpp
+    logging.cpp
     md.cpp
     minimize.cpp
+    multisim.cpp
+    replicaexchange.cpp
     runner.cpp
     tpi.cpp
     )
