Place doxygen documentation in dev-manual
Changes the directory to place the Doxygen documentation in to the
dev-manual subdirectory of the documentation build to resolve the link
issues.

Change-Id: I3318858e762ffc7772a24223612b0803b40125d8

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -72,6 +72,9 @@ find_package(Sphinx ${EXPECTED_SPHINX_VERSION} QUIET COMPONENTS pygments)
 set(HTML_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/html")
 file(MAKE_DIRECTORY ${HTML_OUTPUT_DIR})
 
+# Set directory to be used for doxygen output
+set(DOXYGEN_OUTPUT_DIR "${HTML_OUTPUT_DIR}/dev-manual/doxygen")
+
 # Prepare directories for pdf/tex output
 set(TEX_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/manual")
 set(SPHINX_LATEX_FILE "${TEX_OUTPUT_DIR}/gromacs.tex")
