--- a/src/gromacs/math/tests/CMakeLists.txt
+++ b/src/gromacs/math/tests/CMakeLists.txt
@@ -36,5 +36,6 @@ gmx_add_unit_test(MathUnitTests math-test
                   dofit.cpp
                   functions.cpp
                   invertmatrix.cpp
+                  paddedvector.cpp
                   vectypes.cpp
                   )
