Add short security notice
Fixes #2645

Change-Id: I5fba37bca803c13ee9251aae0aae54c155537890

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -368,6 +368,7 @@ if (SPHINX_FOUND)
         user-guide/mdrun-features.rst
         user-guide/mdrun-performance.rst
         user-guide/run-time-errors.rst
+        user-guide/security.rst
         user-guide/system-preparation.rst
         user-guide/terminology.rst
         )
