Add short security notice
Cheery picked from master.

Refs #2645

Change-Id: I5fba37bca803c13ee9251aae0aae54c155537890

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -166,6 +166,7 @@ if (SPHINX_FOUND)
         user-guide/file-formats.rst
         user-guide/cmdline.rst
         user-guide/environment-variables.rst
+        user-guide/security.rst
         user-guide/terminology.rst
         user-guide/plotje.gif
         user-guide/xvgr.gif
